methods.picture.PictureMono1.scala.error
Erreur de compilation :
PictureMono1:2: error: not found: value marquer
  marquer()
  ^PictureMono1:4: error: not found: value marquer
  marquer()
  ^PictureMono1:6: error: not found: value marquer
  marquer()
  ^